@@ -189,7 +189,7 @@ public class LaneDirectionOfTravelEventRepositoryImplTest {
         Aggregation capturedAggregation = aggregationCaptor.getValue();
 
         // Extract the MatchOperation from the Aggregation pipeline
-        Document pipeline = capturedAggregation.toPipeline(Aggregation.DEFAULT_CONTEXT).get(0);
+        Document pipeline = capturedAggregation.toPipeline(Aggregation.DEFAULT_CONTEXT).getFirst();
 
         // Assert the Match operation Criteria
         assertThat(pipeline.toJson())
@@ -198,7 +198,7 @@ public class LaneDirectionOfTravelEventRepositoryImplTest {
                         intersectionID, startTimeString, endTimeString));
 
         // Serialize results to JSON and compare with the original JSON
-        String resultJson = objectMapper.writeValueAsString(findResponse.getContent().get(0));
+        String resultJson = objectMapper.writeValueAsString(findResponse.getContent().getFirst());
 
         // Remove unused fields from each entry
         List<Document> expectedResult = sampleDocuments.stream().map(doc -> {
@@ -206,13 +206,72 @@ public class LaneDirectionOfTravelEventRepositoryImplTest {
             doc.remove("recordGeneratedAt");
             return doc;
         }).toList();
-        String expectedJson = objectMapper.writeValueAsString(expectedResult.get(0));
+        String expectedJson = objectMapper.writeValueAsString(expectedResult.getFirst());
 
         // Compare JSON with ignored fields
         JSONAssert.assertEquals(expectedJson, resultJson, new CustomComparator(
                 JSONCompareMode.LENIENT, // Allows different key orders
-                new Customization("properties.timeStamp", (o1, o2) -> true),
-                new Customization("properties.odeReceivedAt", (o1, o2) -> true)));
+                new Customization("properties.timeStamp", (_, _) -> true),
+                new Customization("properties.odeReceivedAt", (_, _) -> true)));
     }
 
+    @Test
+    void testCountEventsByCenterlineDistance() {
+        List<IDCount> expectedCounts = new ArrayList<>();
+        IDCount count1 = new IDCount();
+        count1.setId("5.0");
+        count1.setCount(10);
+        expectedCounts.add(count1);
+
+        AggregationResults<IDCount> aggregationResults = new AggregationResults<>(expectedCounts,
+                new Document());
+        doReturn(aggregationResults).when(mongoTemplate).aggregate(any(Aggregation.class), anyString(),
+                eq(IDCount.class));
+
+        List<IDCount> result = repository.countEventsByCenterlineDistance(intersectionID, startTime, endTime);
+
+        assertThat(result).hasSize(1);
+        assertThat(result.getFirst().getId()).isEqualTo("5.0");
+        assertThat(result.getFirst().getCount()).isEqualTo(10);
+        verify(mongoTemplate).aggregate(any(Aggregation.class), eq("CmLaneDirectionOfTravelEvent"),
+                eq(IDCount.class));
+    }
+
+    @Test
+    void testGetMedianDistanceByDegree() {
+        List<IDCount> expectedCounts = new ArrayList<>();
+        IDCount count1 = new IDCount();
+        count1.setId("15.0");
+        count1.setCount(7);
+        expectedCounts.add(count1);
+
+        AggregationResults<IDCount> aggregationResults = new AggregationResults<>(expectedCounts,
+                new Document());
+        doReturn(aggregationResults).when(mongoTemplate).aggregate(any(Aggregation.class), anyString(),
+                eq(IDCount.class));
+
+        List<IDCount> result = repository.getMedianDistanceByDegree(intersectionID, startTime, endTime);
+
+        assertThat(result).hasSize(1);
+        assertThat(result.getFirst().getId()).isEqualTo("15.0");
+        assertThat(result.getFirst().getCount()).isEqualTo(7);
+        verify(mongoTemplate).aggregate(any(Aggregation.class), eq("CmLaneDirectionOfTravelEvent"),
+                eq(IDCount.class));
+    }
+
+    @Test
+    void testFindLatest() {
+        LaneDirectionOfTravelEvent event = new LaneDirectionOfTravelEvent();
+        event.setIntersectionID(intersectionID);
+
+        doReturn(event).when(mongoTemplate).findOne(any(Query.class), eq(LaneDirectionOfTravelEvent.class),
+                anyString());
+
+        Page<LaneDirectionOfTravelEvent> page = repository.findLatest(intersectionID, startTime, endTime);
+
+        assertThat(page.getContent()).hasSize(1);
+        assertThat(page.getContent().getFirst().getIntersectionID()).isEqualTo(intersectionID);
+        verify(mongoTemplate).findOne(any(Query.class), eq(LaneDirectionOfTravelEvent.class),
+                eq("CmLaneDirectionOfTravelEvent"));
+    }
 }
